# viennamesh-dev

examples/data/m_mesh/: cube_curve.vtp  cube_curve_high.vtp  cubevtp.vtp  dome_high.vtp  output.vtu  test.vtk
examples/tutorials/: CMakeLists.txt  CMakeLists.txt~  _compare_curvatur_calculation.cpp  _convert_silvaco_file.cpp  _mesh_distance.cpp  _mesh_quality.cpp  cgal_curve_test.cpp  cgal_mesh_simplify_curve.cpp  test.cpp  vtk_cleaner.cpp  vtk_print_mesh_data.cpp
plugins/: CMakeLists.txt
plugins/CGAL/: CMakeLists.txt  CMakeLists.txt~  cgal_compare_curvature_calculations.cpp  cgal_compare_curvature_calculations.hpp  cgal_curvature_functions.cpp  cgal_curvature_functions.hpp  cgal_curve.cpp  cgal_curve.hpp  cgal_mesh.cpp  cgal_mesh.hpp  cgal_mesh_simplification.cpp  cgal_remove_short_edges.cpp  cgal_remove_short_edges.hpp  cgal_simplify_curve.cpp  cgal_simplify_curve.hpp  cgal_statistic_2.cpp  cgal_statistic_2.hpp  cgal_statistic_2_funktions.cpp  curvature_calculator.cpp  curvature_calculator.hpp  plugin.cpp
plugins/CGAL/Curvature_policies/: cgal_curve_cost.h  cgal_curve_placement.h  cgal_curve_stop.h  cgal_flat_cost_p.h  cgal_hash_points.hpp  cgal_my_curve_cost.h
plugins/CGAL/Curvature_policies/boundary/: cgal_curve_boundary_cost.h  cgal_curve_boundary_placement.h  cgal_curve_boundary_stop.h
plugins/CGAL/Curvature_policies/curved/: cgal_curve_curved_cost.hpp  cgal_curve_curved_placement.hpp  cgal_curve_curved_stop.hpp
plugins/CGAL/Curvature_policies/features/: cgal_curve_features_cost.hpp  cgal_curve_features_placement.hpp  cgal_curve_features_stop.hpp
plugins/CGAL/Curvature_policies/flat/: cgal_curve_flat_cost.hpp  cgal_curve_flat_placement.hpp  cgal_curve_flat_stop.hpp
plugins/CGAL/analizing/: cgal_mesh_analytics.cpp  cgal_mesh_analytics.hpp
plugins/CGAL/curve_calc_dev/: curve_test_1.hpp
plugins/VTK/: CMakeLists.txt  plugin.cpp  vtk_calculate_mesh_quality_metrics.cpp  vtk_calculate_mesh_quality_metrics.hpp  vtk_clean.cpp  vtk_clean.hpp  vtk_mesh_distance.cpp  vtk_mesh_distance.hpp  vtk_print_mesh_data.cpp  vtk_print_mesh_data.hpp
plugins/io/: CMakeLists.txt  common.cpp  common.hpp  lagacy_VTK_reader.hpp  mesh_reader.cpp  mesh_writer.cpp  silvaco_str_reader.hpp
plugins/statistics/: CMakeLists.txt  CMakeLists.txt~  cgal_first_test.cpp  cgal_first_test.hpp  make_statistic.cpp  plugin.cpp  statistic.hpp
src/viennamesh/: context.cpp
