add_executable(data data.cpp)
target_link_libraries(data viennameshpp)

add_executable(file_read_write file_read_write.cpp)
target_link_libraries(file_read_write viennameshpp)

add_executable(triangle_mesher triangle_mesher.cpp)
target_link_libraries(triangle_mesher viennameshpp)

add_executable(triangle_hull_mesher triangle_hull_mesher.cpp)
target_link_libraries(triangle_hull_mesher viennameshpp)

add_executable(tetgen_mesher tetgen_mesher.cpp)
target_link_libraries(tetgen_mesher viennameshpp)

add_executable(extract_boundary extract_boundary.cpp)
target_link_libraries(extract_boundary viennameshpp)

add_executable(symmetry_2d symmetry_2d.cpp)
target_link_libraries(symmetry_2d viennameshpp)

add_executable(symmetry_3d symmetry_3d.cpp)
target_link_libraries(symmetry_3d viennameshpp)

add_executable(cgal_mesh_simplification cgal_mesh_simplification)
target_link_libraries(cgal_mesh_simplification viennameshpp)

add_executable(cgal_automatic_mesh_simplification cgal_automatic_mesh_simplification)
target_link_libraries(cgal_automatic_mesh_simplification viennameshpp)

add_executable(mesh_statistics mesh_statistics)
target_link_libraries(mesh_statistics viennameshpp)

add_executable(vtk_coarsening vtk_coarsening.cpp)
target_link_libraries(vtk_coarsening viennameshpp)

add_executable(pragmatic_refiner pragmatic_refiner.cpp)
target_link_libraries(pragmatic_refiner viennameshpp)
target_link_libraries(pragmatic_refiner ${VTK_LIBRARIES})

add_executable(pragmatic_smoother pragmatic_smoother.cpp)
target_link_libraries(pragmatic_smoother viennameshpp)
target_link_libraries(pragmatic_smoother ${VTK_LIBRARIES})

add_executable(pragmatic_swapper pragmatic_swapper.cpp)
target_link_libraries(pragmatic_swapper viennameshpp)
target_link_libraries(pragmatic_swapper ${VTK_LIBRARIES})

add_executable(pragmatic_metis_partitioner pragmatic_metis_partitioner.cpp)
target_link_libraries(pragmatic_metis_partitioner viennameshpp)
target_link_libraries(pragmatic_metis_partitioner ${VTK_LIBRARIES})

add_executable(pragmatic_refine_multi_region_mesh pragmatic_refine_multi_region_mesh.cpp)
target_link_libraries(pragmatic_refine_multi_region_mesh viennameshpp)
target_link_libraries(pragmatic_refine_multi_region_mesh ${VTK_LIBRARIES})

add_executable(test test.cpp)
target_link_libraries(test viennameshpp)

add_executable(cgal_mesh_simplify_curve cgal_mesh_simplify_curve.cpp)
target_link_libraries(cgal_mesh_simplify_curve viennameshpp)

add_executable(vtk_cleaner vtk_cleaner.cpp)
target_link_libraries(vtk_cleaner viennameshpp)

add_executable(vtk_print_mesh_data vtk_print_mesh_data.cpp)
target_link_libraries(vtk_print_mesh_data viennameshpp)

add_executable(_mesh_distance _mesh_distance.cpp)
target_link_libraries(_mesh_distance viennameshpp)

add_executable(_mesh_quality _mesh_quality.cpp)
target_link_libraries(_mesh_quality viennameshpp)

add_executable(_compare_curvatur_calculation _compare_curvatur_calculation.cpp)
target_link_libraries(_compare_curvatur_calculation viennameshpp)

#add_executable(_data_generator _data_generator.cpp)
#target_link_libraries(_data_generator viennameshpp)

